--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,20 +1,17 @@
 cmake_minimum_required(VERSION 3.19)
-project(test_rls_filter LANGUAGES CXX)
+#project(test_rls_filter LANGUAGES CXX)
 
-# Setup testing
+#Setup testing
 enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIR})
 
-# Add test cpp file
-add_executable(${PROJECT_NAME}
-        test_rls_filter.cpp
-        )
+#Add test cpp file
+add_executable("${PROJECT_NAME}_test" test_rls_filter.cpp)
+target_include_directories("${PROJECT_NAME}_test" PRIVATE include)
 
-# Link test executable against gtest & gtest_main
-target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY})
+#Link test executable against gtest &gtest_main
+target_link_libraries("${PROJECT_NAME}_test" ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY})
+target_link_libraries("${PROJECT_NAME}_test" ${CMAKE_PROJECT_NAME})
 
-add_test(
-        NAME ${PROJECT_NAME}
-        COMMAND ${PROJECT_NAME}
-)
+add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
