--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,6 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Install dependencies
+      with:
+        ubuntu: |
+          apt: libeigen3-dev doxygen doxygen-latex libboost-all-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
