--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Install dependencies
-      with:
-        ubuntu: |
-          apt: libeigen3-dev doxygen doxygen-latex libboost-all-dev
+    - name: Dependencies [Ubuntu]
+          run: |
+            sudo apt-get update
+            sudo apt-get install git build-essential cmake libeigen3-dev valgrind
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
