--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Dependencies [Ubuntu]
       run: |
         sudo apt-get update
-        sudo apt-get install git build-essential cmake libeigen3-dev valgrind
+        sudo apt-get install git build-essential cmake libeigen3-dev valgrind libgtest-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
