--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,6 +21,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install git build-essential cmake libeigen3-dev valgrind libgtest-dev
+        cd /usr/src/gtest
+        sudo cmake CMakeLists.txt
+        sudo make
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
