--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,9 +21,14 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install git build-essential cmake libeigen3-dev valgrind libgtest-dev
+        sudo apt-get install libgtest-dev
         cd /usr/src/gtest
         sudo cmake CMakeLists.txt
         sudo make
+        sudo cp *.a /usr/lib
+        sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a
+        sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
+
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
