fix: correct cmake test build

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,4 +13,4 @@ target_include_directories("${PROJECT_NAME}_test" PRIVATE include)
 target_link_libraries("${PROJECT_NAME}_test" ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY})
 target_link_libraries("${PROJECT_NAME}_test" ${CMAKE_PROJECT_NAME})
 
-add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+add_test(NAME ${PROJECT_NAME} COMMAND "${PROJECT_NAME}_test")
