--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI of eigen-quadprog
+name: Install dependences
 
 on:
   push:
@@ -10,37 +10,41 @@ on:
     branches:
       - '**'
 
+
 jobs:
-
   build:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-16.04, ubuntu-18.04, macos-latest, windows-latest]
-        build-type: [Debug, RelWithDebInfo]
-        compiler: [gcc, clang]
-        #exclude:
-          # Only default compiler on macos-latest and windows-latest
-         # - os: macos-latest
-           # compiler: clang
-          #- os: windows-latest
-            #compiler: clang
-
+    name: '[${{ matrix.os }}@${{ matrix.build_type }}]'
     runs-on: ${{ matrix.os }}
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-    - name: Install dependencies
-      with:
-        compiler: ${{ matrix.compiler }}
-        build-type: ${{ matrix.build-type }}
-        ubuntu: |
-          apt: libeigen3-dev doxygen doxygen-latex libboost-all-dev
-        macos: |
-          cask: gfortran
-          brew: eigen boost
-        windows: |
-          github:
-            - path: eigenteam/eigen-git-mirror
-              ref: 3.3.7
+    strategy:
+      matrix:
+        build_type: [ Release ]
+        os: [ ubuntu-latest, windows-latest, macOS-latest ]
+
+        steps:
+          - uses: actions/checkout@master
+
+          # Print environment variables to simplify development and debugging
+          - name: Environment Variables
+            shell: bash
+            run: env
+
+          # ============
+          # DEPENDENCIES
+          # ============
+
+          - name: Dependencies [Windows]
+            if: matrix.os == 'windows-latest'
+            run: |
+              github:
+                - path: eigenteam/eigen-git-mirror
+                  ref: 3.3.7
+
+          - name: Dependencies [macOS]
+            if: matrix.os == 'macOS-latest'
+            run: |
+              brew : eigen
+
+          - name: Dependencies [Ubuntu]
+            if: matrix.os == 'ubuntu-latest'
+            run: |
+              apt : libeigen3-dev 
