--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Install dependences
+name: Install_dependences
 
 on:
   push:
