--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -40,9 +40,11 @@ jobs:
       - name: Dependencies [macOS]
         if: matrix.os == 'macOS-latest'
         run: |
-          brew: eigen
+          brew ungrade
+          brew install eigen
 
       - name: Dependencies [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
         run: |
-          apt: libeigen3-dev
+          sudo apt-get update
+          sudo apt-get install
