--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -34,8 +34,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           github:
-            - path: eigenteam/eigen-git-mirror
-              ref: 3.3.7
+            path: eigenteam/eigen-git-mirror
+            ref: 3.3.7
 
       - name: Dependencies [macOS]
         if: matrix.os == 'macOS-latest'
