--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -33,9 +33,7 @@ jobs:
       - name: Dependencies [Windows]
         if: matrix.os == 'windows-latest'
         run: |
-          github:
-            path: eigenteam/eigen-git-mirror
-            ref: 3.3.7
+          vcpkg install eigen3
 
       - name: Dependencies [macOS]
         if: matrix.os == 'macOS-latest'
