--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Dependencies [Windows]
         if: matrix.os == 'windows-latest'
         run: |
-          vcpkg install eigen3 googletest
+          vcpkg install eigen3
 
       - name: Dependencies [macOS]
         if: matrix.os == 'macOS-latest'
