--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -44,7 +44,19 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp *.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
+          sudo apt-get install libgtest-dev
+          echo $PATH
+          cd $HOME
+          mkdir gtest
+          cp -R /usr/src/googletest/* ./gtest
+
+          cd gtest
+          mkdir build
+          cd build
+
+          cmake .. -DCMAKE_INSTALL_PREFIX=$HOME/gtest-install
+          make install -j $(nproc)
+          echo "GTEST_ROOT=$HOME/gtest-install" >> $GITHUB_ENV
 
       - name: Create Build Environment
           # Some projects don't allow in-source building, so create a separate build directory
