--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         build_type: [ Release ]
-        os: [ ubuntu-latest, windows-latest, macOS-latest ]
+        os: [  windows-latest, macOS-latest ] #ubuntu-latest,
 
     steps:
       - uses: actions/checkout@master
