build: change target os

--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         build_type: [ Release ]
-        os: [  windows-latest, macOS-latest ] #ubuntu-latest,
+        os: [ ubuntu-latest, macOS-latest ] #windows-latest, 
 
     steps:
       - uses: actions/checkout@master
