--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -44,7 +44,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install libgtest-dev libeigen3-dev
+          sudo apt-get install -y libgtest-dev libeigen3-dev
 
       - name: Create Build Environment
           # Some projects don't allow in-source building, so create a separate build directory
