refactor:workflows names

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,6 @@ target_include_directories("${PROJECT_NAME}_test" PRIVATE include)
 #Link test executable against gtest &gtest_main
 target_link_libraries("${PROJECT_NAME}_test" ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY})
 target_link_libraries("${PROJECT_NAME}_test" ${CMAKE_PROJECT_NAME})
-TARGET_LINK_LIBRARIES( "${PROJECT_NAME}_test" pthread)
+target_link_libraries( "${PROJECT_NAME}_test" pthread)
 
 add_test(NAME ${PROJECT_NAME} COMMAND "${PROJECT_NAME}_test")
