--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -38,13 +38,13 @@ jobs:
       - name: Dependencies [macOS]
         if: matrix.os == 'macOS-latest'
         run: |
-          brew install eigen googletest
+          brew install eigen googletest doxygen
 
       - name: Dependencies [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtest-dev libeigen3-dev
+          sudo apt-get install -y libgtest-dev libeigen3-dev doxygen
 
       - name: Create Build Environment
           # Some projects don't allow in-source building, so create a separate build directory
