--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -44,7 +44,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y doxygen -y libgtest-dev libeigen3-dev
+          sudo apt-get install -y libgtest-dev libeigen3-dev
+          wget -qO- "http://doxygen.nl/files/doxygen-1.8.20.linux.bin.tar.gz" | sudo tar --strip-components=1 -xz -C /usr/local
+          sudo apt-get install -y libclang-9-dev
 
       - name: Create Build Environment
           # Some projects don't allow in-source building, so create a separate build directory
