--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtest-dev libeigen3-dev
-          sudo apt-get install -y doxygen
+          sudo apt-get install -y graphviz doxygen
 
       - name: Create Build Environment
           # Some projects don't allow in-source building, so create a separate build directory
