build: add graphviz on OSX build

--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Dependencies [macOS]
         if: matrix.os == 'macOS-latest'
         run: |
-          brew install eigen googletest doxygen
+          brew install eigen googletest graphviz doxygen
 
       - name: Dependencies [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
