--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build_type: [ Release ]
+        build_type: [ Debug, Release ]
         os: [ ubuntu-latest, macOS-latest ] #windows-latest,
 
     steps:
