--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -29,6 +29,10 @@ jobs:
       # ============
       # DEPENDENCIES
       # ============
+      - name: Googletest installer
+      # You may pin to the exact commit or the version.
+      # uses: MarkusJx/googletest-installer@2dbed3d0a9dc19bebe3e36773185ab9c17664c8d
+        uses: MarkusJx/googletest-installer@v1.1
 
       - name: Dependencies [Windows]
         if: matrix.os == 'windows-latest'
