--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -42,15 +42,15 @@ jobs:
       - name: Dependencies [macOS]
         if: matrix.os == 'macOS-latest'
         run: |
-          brew install eigen 
-          # googletest graphviz doxygen
+          brew install eigen doxygen graphviz
+          # googletest  
 
       - name: Dependencies [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtest-dev libeigen3-dev
-          # sudo apt-get install -y graphviz doxygen
+          sudo apt-get install -y libeigen3-dev
+          sudo apt-get install -y graphviz doxygen
 
       - name: Create Build Environment
           # Some projects don't allow in-source building, so create a separate build directory
