--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable("${PROJECT_NAME}_test" ${test_sources})
 target_include_directories("${PROJECT_NAME}_test" PRIVATE include)
 
 #Link test executable against gtest &gtest_main
-target_link_libraries("${PROJECT_NAME}_test" ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY})
+target_link_libraries("${PROJECT_NAME}_test" ${GTEST_BOTH_LIBRARIES})
 target_link_libraries("${PROJECT_NAME}_test" ${CMAKE_PROJECT_NAME})
 target_link_libraries( "${PROJECT_NAME}_test" pthread)
 
