--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -71,7 +71,7 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
-        run: cmake --build . -CMAKE_BUILD_TYPE=$BUILD_TYPE
+        run: cmake --build . 
 
       - name: Test
         working-directory: ${{github.workspace}}/build
